--- a/themes/cdmstheme/layouts/_default/single.html
+++ b/themes/cdmstheme/layouts/_default/single.html
@@ -16,7 +16,9 @@
                 <h2 class="mt-2">{{ .Title }}</h2>
               </div>
               <hr />
-                 {{ .Content }}
+              <div class="imgtengah">
+                {{ .Content }}
+              </div>
 
               <br />
                <div>
