--- a/themes/cdmstheme/layouts/partials/nav.html
+++ b/themes/cdmstheme/layouts/partials/nav.html
@@ -13,14 +13,14 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">Tentang Kami</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="/profile.html">Profile</a>
-            <a class="dropdown-item" href="/struktur.html">Struktur Organisasi</a>
+            <a class="dropdown-item" href="/struktur">Struktur Organisasi</a>
           </div>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/blog">Blog</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link btn btn-warning text-white btn-donasi" href="/post/donasi">Donasi</a>
+          <a class="nav-link btn btn-warning text-white btn-donasi" href="/donasi">Donasi</a>
         </li>
       </ul>
     </div>
