update struktur organisasi

--- a/themes/cdmstheme/layouts/_default/struktur.html
+++ b/themes/cdmstheme/layouts/_default/struktur.html
@@ -3,18 +3,18 @@
   {{- partial "head.html" . -}}
   <body>
     {{- partial "nav.html" . -}}
-   {{ partial "header.html" . }} 
-   
-    <div class="box-struktur mb-5">
+   <!-- {{ partial "header.html" . }}  -->
+   <br> 
+    <div class="box-struktur mb-5 mt-5 pt-5">
         <div class="container d-flex justify-content-center align-items-center">
           <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
+                  <img src="/img/struktur/default.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Izza Wildan R</h2>
-                      <center><span>Koor Media</span></center>
+                      <h2>Ujang Candra Irawan</h2>
+                      <center><span>Direktur</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
                           <li><a href=""><i class="fab fa-twitter"></i></a></li>
@@ -26,7 +26,41 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/3.png" alt="">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Farida</h2>
+                      <center><span>Bendahara</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Anggriana</h2>
+                      <center><span>Sekretaris</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -43,7 +77,41 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Binti</h2>
+                      <center><span>Anggota Div Kajian</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Juwita</h2>
+                      <center><span>Anggota Div Kajian</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -60,12 +128,12 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
+                  <img src="/img/struktur/default.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Muksin Gole</h2>
-                      <center><span>Koor Kajian</span></center>
+                      <h2>Rafli</h2>
+                      <center><span>Anggota Media</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
                           <li><a href=""><i class="fab fa-twitter"></i></a></li>
@@ -77,12 +145,12 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
+                  <img src="/img/struktur/default.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Izza Wildan R</h2>
-                      <center><span>Koor Media</span></center>
+                      <h2>Wahyu</h2>
+                      <center><span>Koor Satson</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
                           <li><a href=""><i class="fab fa-twitter"></i></a></li>
@@ -94,12 +162,12 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
+                  <img src="/img/struktur/default.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Izza Wildan R</h2>
-                      <center><span>Koor Media</span></center>
+                      <h2>Dini</h2>
+                      <center><span>Anggota Satson</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
                           <li><a href=""><i class="fab fa-twitter"></i></a></li>
@@ -111,12 +179,12 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
+                  <img src="/img/struktur/default.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Izza Wildan R</h2>
-                      <center><span>Koor Media</span></center>
+                      <h2>Fahrido</h2>
+                      <center><span>Anggota  Satson</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
                           <li><a href=""><i class="fab fa-twitter"></i></a></li>
@@ -128,75 +196,7 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
-              </div>
-              <div class="content">
-                  <div class="details">
-                      <h2>Izza Wildan R</h2>
-                      <center><span>Koor Media</span></center>
-                      <ul class="social_icons">
-                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-           <div class="box-cards">
-              <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
-              </div>
-              <div class="content">
-                  <div class="details">
-                      <h2>Izza Wildan R</h2>
-                      <center><span>Koor Media</span></center>
-                      <ul class="social_icons">
-                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-           <div class="box-cards">
-              <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
-              </div>
-              <div class="content">
-                  <div class="details">
-                      <h2>Izza Wildan R</h2>
-                      <center><span>Koor Media</span></center>
-                      <ul class="social_icons">
-                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-           <div class="box-cards">
-              <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
-              </div>
-              <div class="content">
-                  <div class="details">
-                      <h2>Izza Wildan R</h2>
-                      <center><span>Koor Media</span></center>
-                      <ul class="social_icons">
-                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-           <div class="box-cards">
-              <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
+                  <img src="/img/struktur/default.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
