--- a/themes/cdmstheme/layouts/_default/struktur.html
+++ b/themes/cdmstheme/layouts/_default/struktur.html
@@ -13,6 +13,40 @@
               </div>
               <div class="content">
                   <div class="details">
+                      <h2>Ahrar Salam Al- Farisi</h2>
+                      <center><span>Pembina</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+          <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Irwan Mulia Suranto, S.Ag.,M.Ag</h2>
+                      <center><span>Pembina</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+          <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
                       <h2>Ujang Candra Irawan</h2>
                       <center><span>Direktur</span></center>
                       <ul class="social_icons">
@@ -30,7 +64,7 @@
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Farida</h2>
+                      <h2>Faridatul Hidayah</h2>
                       <center><span>Bendahara</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
@@ -47,7 +81,7 @@
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Anggriana</h2>
+                      <h2>Anggriana Widya J</h2>
                       <center><span>Sekretaris</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
@@ -60,7 +94,7 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
+                  <img src="/img/struktur/2.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -81,7 +115,24 @@
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Binti</h2>
+                      <h2>Isnaini K Gole</h2>
+                      <center><span>Koor Kajian</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Binti Nurul A</h2>
                       <center><span>Anggota Div Kajian</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
@@ -115,7 +166,75 @@
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Izza Wildan R</h2>
+                      <h2>Wahyu Tri Santoso</h2>
+                      <center><span>Koor Div Pelajar</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Fahridho Mally</h2>
+                      <center><span>Anggota Div Pelajar</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Ciptia Wijaya I</h2>
+                      <center><span>Anggota Div Pelajar</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Nursifa Maulidini R P</h2>
+                      <center><span>Anggota Div Pelajar</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Izza Wildan Ridhoni</h2>
                       <center><span>Koor Media</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
@@ -132,76 +251,8 @@
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Rafli</h2>
+                      <h2>Rafli Arsyad</h2>
                       <center><span>Anggota Media</span></center>
-                      <ul class="social_icons">
-                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-           <div class="box-cards">
-              <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
-              </div>
-              <div class="content">
-                  <div class="details">
-                      <h2>Wahyu</h2>
-                      <center><span>Koor Satson</span></center>
-                      <ul class="social_icons">
-                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-           <div class="box-cards">
-              <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
-              </div>
-              <div class="content">
-                  <div class="details">
-                      <h2>Dini</h2>
-                      <center><span>Anggota Satson</span></center>
-                      <ul class="social_icons">
-                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-           <div class="box-cards">
-              <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
-              </div>
-              <div class="content">
-                  <div class="details">
-                      <h2>Fahrido</h2>
-                      <center><span>Anggota  Satson</span></center>
-                      <ul class="social_icons">
-                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-           <div class="box-cards">
-              <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
-              </div>
-              <div class="content">
-                  <div class="details">
-                      <h2>Izza Wildan R</h2>
-                      <center><span>Koor Media</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
                           <li><a href=""><i class="fab fa-twitter"></i></a></li>
