--- a/themes/cdmstheme/static/css/style.css
+++ b/themes/cdmstheme/static/css/style.css
@@ -243,3 +243,10 @@ nav {
 .imgtengah img {
   width: 100% !important;
 }
+
+/* responsive web */
+@media only screen and (min-width: 600px) {
+  .jumbotron-isi h2 {
+    font-size: 50px;
+  }
+}
