update link sosmed

--- a/themes/cdmstheme/layouts/partials/footer.html
+++ b/themes/cdmstheme/layouts/partials/footer.html
@@ -19,13 +19,13 @@
       <div class="col-12 col-sm-6 col-md-4 footer-sosmed mt-3 mt-sm-0">
         <h5>Social Media</h5>
         <ul>
-          <a href="#"
+          <a href="https://www.instagram.com/cdmssyuhada/"
             ><li><i class="fab fa-instagram"></i></li
           ></a>
-          <a href="#"
+          <a href="https://www.facebook.com/cdmssyuhada-108338308396642"
             ><li><i class="fab fa-facebook"></i></li
           ></a>
-          <a href="#"
+          <a href="https://twitter.com/cdmssyuhada"
             ><li><i class="fab fa-twitter"></i></li
           ></a>
         </ul>
