--- a/themes/cdmstheme/static/css/style.css
+++ b/themes/cdmstheme/static/css/style.css
@@ -244,9 +244,29 @@ nav {
   width: 100% !important;
 }
 
+.pengantar h2 {
+  font-size: 35px;
+  line-height: 35px;
+}
+
+.pengantar span {
+  font-size: 25px;
+}
 /* responsive web */
 @media only screen and (min-width: 600px) {
   .jumbotron-isi h2 {
     font-size: 50px;
+  }
+  f-philo {
+    font-size: 30px;
+  }
+
+  .pengantar h2 {
+    font-size: 40px;
+    line-height: 45px;
+  }
+
+  .pengantar span {
+    font-size: 25px;
   }
 }
