--- a/themes/cdmstheme/layouts/partials/nav.html
+++ b/themes/cdmstheme/layouts/partials/nav.html
@@ -12,7 +12,7 @@
         <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">Tentang Kami</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/profile.html">Profile</a>
+            <a class="dropdown-item" href="/profile">Profile</a>
             <a class="dropdown-item" href="/struktur">Struktur Organisasi</a>
           </div>
         </li>
