--- a/themes/cdmstheme/layouts/partials/nav.html
+++ b/themes/cdmstheme/layouts/partials/nav.html
@@ -20,6 +20,9 @@
           <a class="nav-link" href="/blog">Blog</a>
         </li>
         <li class="nav-item active">
+          <a class="nav-link" href="#">Agenda</a>
+        </li>
+        <li class="nav-item active">
           <a class="nav-link btn btn-warning text-white btn-donasi" href="/donasi">Donasi</a>
         </li>
       </ul>
