--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,7 +32,7 @@
             </h2>
             <p>CDMS merrupakan lembaga semi otonom di bawah yayasan masjid syuhada (YASMA) , berkedudukan di Masjid Syuhada Yogyakarta yang beralamat di jalan 1 dewa nyoman oka 13 kotabaru yogyakarta</p>
 
-            <a href="" class="btn-custom text-center">selengkapnya</a>
+            <a href="/profile" class="btn-custom text-center">selengkapnya</a>
           </div>
           <div class="col-12 col-sm-6 mt-5 mt-sm-0">
             <img src="/img/3.JPG" alt="" width="100%" />
