--- a/themes/cdmstheme/layouts/shortcodes/layangan-putus-ig.html
+++ b/themes/cdmstheme/layouts/shortcodes/layangan-putus-ig.html
@@ -1,5 +1,5 @@
 <center>
-  <iframe src="https://drive.google.com/file/d/1lbxzmCiO38s-1uL9kO62aK_bQqYUgfwZ/preview" width="640" height="480" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1lbxzmCiO38s-1uL9kO62aK_bQqYUgfwZ/preview" width="100%" height="480" allow="autoplay"></iframe>
 
   <blockquote
     class="instagram-media"
