--- a/themes/cdmstheme/layouts/partials/nav.html
+++ b/themes/cdmstheme/layouts/partials/nav.html
@@ -20,7 +20,7 @@
           <a class="nav-link" href="/blog">Blog</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Agenda</a>
+          <a class="nav-link" href="/laporan">Laporan</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link btn btn-warning text-white btn-donasi" href="/donasi">Donasi</a>
