--- a/themes/cdmstheme/layouts/_default/laporan.html
+++ b/themes/cdmstheme/layouts/_default/laporan.html
@@ -7,7 +7,8 @@
 <div class="container mb-5 mt-5 pt-5">
     <div class="bg-white p-5 " style="border-radius: 20px;">
        <h3>Laporan Kajian Ahad Pagi</h3>
-       <a href="#"> Bulan Januari 2022</a> <br>
+      
+       <a href="/laporan/januari.docx"> Bulan Januari 2022</a><br>
        <a href="#"> Bulan februari 2022</a><br>
        <a href="#"> Bulan maret 2022</a><br>
        <a href="#"> Bulan April 2022</a> <br>
