--- a/themes/cdmstheme/layouts/_default/struktur.html
+++ b/themes/cdmstheme/layouts/_default/struktur.html
@@ -9,7 +9,7 @@
         <div class="container d-flex justify-content-center align-items-center">
           <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
+                  <img src="/img/struktur/Ahrar.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -43,7 +43,7 @@
           </div>
           <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
+                  <img src="/img/struktur/Ujang.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -60,7 +60,7 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
+                  <img src="/img/struktur/Farida.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -77,7 +77,7 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
+                  <img src="/img/struktur/Anggri.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -94,7 +94,7 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/2.png" alt="">
+                  <img src="/img/struktur/Muksin.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -109,26 +109,10 @@
                   </div>
               </div>
           </div>
+         
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
-              </div>
-              <div class="content">
-                  <div class="details">
-                      <h2>Isnaini K Gole</h2>
-                      <center><span>Anggota Div Kajian</span></center>
-                      <ul class="social_icons">
-                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-           <div class="box-cards">
-              <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
+                  <img src="/img/struktur/Binti.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -145,7 +129,7 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
+                  <img src="/img/struktur/Juwita.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -162,7 +146,7 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
+                  <img src="/img/struktur/Wahyu.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -179,7 +163,7 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
+                  <img src="/img/struktur/Faridho.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -230,7 +214,7 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
+                  <img src="/img/struktur/Wildan.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
@@ -247,7 +231,7 @@
           </div>
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/default.png" alt="">
+                  <img src="/img/struktur/Rafly.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
