--- a/themes/cdmstheme/static/css/struktur.css
+++ b/themes/cdmstheme/static/css/struktur.css
@@ -60,6 +60,10 @@
   transform-origin: top;
   overflow: hidden;
   border-radius: 20px;
+  /* transform: translateY(30px) scale(0.5); */
+}
+
+.box-cards:hover .imgBx {
   transform: translateY(30px) scale(0.5);
 }
 
@@ -74,8 +78,8 @@
 
 .box-cards .content {
   position: absolute;
-  /* top: 150px; */
-  top: 0;
+  top: 150px;
+  /* top: 0; */
   left: 0;
   width: 100%;
   height: 100%;
@@ -86,6 +90,9 @@
   transition: 0.5s;
 }
 
+.box-cards:hover .content {
+  top: 0;
+}
 .box-cards .container .details {
   color: white;
 }
