--- a/themes/cdmstheme/layouts/_default/struktur.html
+++ b/themes/cdmstheme/layouts/_default/struktur.html
@@ -112,6 +112,23 @@
          
            <div class="box-cards">
               <div class="imgBx">
+                  <img src="/img/struktur/Eko.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Eko Nur Cahyo</h2>
+                      <center><span>Anggota Div Kajian</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
                   <img src="/img/struktur/Binti.png" alt="">
               </div>
               <div class="content">
@@ -237,6 +254,40 @@
                   <div class="details">
                       <h2>Rafli Arsyad</h2>
                       <center><span>Anggota Media</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/Dada.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Dada</h2>
+                      <center><span>-</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+           <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/Anggit.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Anggit</h2>
+                      <center><span>-</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
                           <li><a href=""><i class="fab fa-twitter"></i></a></li>
