--- a/themes/cdmstheme/static/css/struktur.css
+++ b/themes/cdmstheme/static/css/struktur.css
@@ -61,10 +61,11 @@
   overflow: hidden;
   border-radius: 20px;
   /* transform: translateY(30px) scale(0.5); */
+  transform: translateY(30px) scale(0.5);
 }
 
 .box-cards:hover .imgBx {
-  transform: translateY(30px) scale(0.5);
+  transform: translateY(30px) scale(1);
 }
 
 .imgBx img {
@@ -78,8 +79,8 @@
 
 .box-cards .content {
   position: absolute;
-  top: 150px;
-  /* top: 0; */
+  /* top: 150px; */
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -91,7 +92,8 @@
 }
 
 .box-cards:hover .content {
-  top: 0;
+  top: 150px;
+  /* top: 0; */
 }
 .box-cards .container .details {
   color: white;
