--- a/themes/cdmstheme/static/css/style.css
+++ b/themes/cdmstheme/static/css/style.css
@@ -43,7 +43,7 @@ nav {
 
 .jumbotron {
   height: 100vh;
-  background-image: url(../img/3.JPG);
+  background-image: url(../img/bg-jumbotron.JPG);
   background-size: cover;
   background-attachment: fixed;
   position: relative;
